[package]
name = "hello"
version = "0.1.0"
authors = ["dianhenglau <dianhenglau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.4"
actix-web = "3"
askama = "0.10"
askama_actix = "0.11"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
